--- a/inicio.html
+++ b/inicio.html
@@ -1,101 +1,136 @@
-<!DOCTYPE html>
-<head>
-    <meta charset="utf-8"/>
-    <title>Dinglis+</title>
-    <link rel="icon" type="image/png" href="images/icono.ico">
-    <meta name="description" content="Dinglis es un juego de plataformas para aprender ingles hecho en la plataforma de Scratch"/>
-    <meta name="author" content="JSJ Team"/>
-    <meta name="keywords" content="Ingles, Dinglis, Juego"/>
-    <link rel="stylesheet" type="text/css" href="css/NavBarra.css" />
-    <link rel="stylesheet" type="text/css" href="css/Pagina.css">
-    <link rel="stylesheet" type="text/css" href="css/deslizador.css">
-</head>
-<body id="body">
-    <br>
-    <a href="inicio.html"><img href="inicio.html" id="logo" src="images/logo.png" width="375" height="105" alt="Dinglis Logo"></a>
-    <br>
+<html lang="en">
 
-    <nav class="NavBarra">
-        <ul>
-            <li><a class="active" style="color: black;" href="#">Inicio</a></li>
-            <li><a href="objetivos.html">Objetivos</a></li>
-            <li><a href="problema.html">Problema</a></li>
-            <li><a href="jugar.html">Jugar</a></li>
-            <li><a href="herramientas.html">Herramientas</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="Login.html">Cerrar Sesión</a></li>
-         </ul>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Inicio - Dinglis+</title>
+    <link rel="icon" type="image/x-icon" href="imagenes/icono.ico">
+    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/pagina.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/deslizador.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;700&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=VT323&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@1,700&display=swap" rel="stylesheet">
+</head>
+
+<body>
+
+    <nav id="nav">
+        <div id="nav-logo">
+            <a>DINGLIS+</a>
+        </div>
+
+        <div id="nav-paginas">
+            <ul id="nav-lista">
+                <div style="margin-right: 50px;width: 0;float: right;">&nbsp;</div>
+                <li class="dropdown" style="float: right;">
+                    <a class="dropbtn hover-underline-animation" style="margin-right: 0;" href="">Perfil</a>
+                    <div class="dropdown-content">
+                        <a class="hover-underline-animation" style="margin-right: 0px;" href="index.php">Cerrar sesión</a>
+                    </div>
+                </li>
+                <li><a class="hover-underline-animation" href="contacto.html">Contacto</a></li>
+                <li><a class="hover-underline-animation" href="herramientas.html">Herramientas</a></li>
+                <li><a class="hover-underline-animation" href="jugar.html">Jugar</a></li>
+                <li><a class="hover-underline-animation" href="">Quiz</a></li>
+                <li><a class="hover-underline-animation" href="tips.html">Tips</a></li>
+                <li style="margin-top: 10;"><a style="margin-right: 40px;" class="actual" href="inicio.html">Inicio</a></li>
+            </ul>
+        </div>
     </nav>
 
-    <h1 class="subtitulo">
-        Acerca de Dinglis+
-    </h1>
 
-    <div class="div_texto">
-        <p>
-            Dinglis+ es un videojuego de plataformas para aprender Ingles.<br>
-			Se llama Dinglis+ debido a que es una expansión del proyecto original, es un videojuego de plataformas para aprender Ingles. Enseña de forma interactiva y  sustantivos, adjetivos y verbos de una forma condensa, interesante, divertida y atractiva. Esta lo hace mediante pistas que están en cada nivel el jugador tendrá que recoger la pista y se le abrirá un menú con información de un sustantivo, adjetivo o verbo.  Al final del nivel tendrá que utilizar esa información para llegar al siguiente nivel.
-        </p>
+    <div id="contenedor">
+        <div>
+            <section style="height: 77%;">
+
+                <div id="patron1">
+                    <p class="titulo" style="margin-top: 0px; margin-bottom: 0px;">
+                        APRENDE<br>INGLES&nbsp;
+                    </p>
+                </div>
+
+
+                <div class="bloque">
+                    <p id="parrafo">
+                        Aprende sustantivos, verbos, adjetivos, adverbios con Dinglis+
+                        <br>
+
+                        Puedes aprender jugando el videojuego o solucionando el quiz.
+                    </p>
+                </div>
+                <div class="bloque">
+                    <button class="boton" style="margin-left: 150px;">Quiz</button>
+                    <button class="boton">Videojuego</button>
+                </div>
+            </section>
+
+            <section style="height: 77%;">
+                <img id="imagenIngles" src="imagenes/english.jpg">
+            </section>
+        </div>
+        <div style="display: inline-block; width: 100%;">
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <div id="seccion-abajo" style="display: inline-block; width: 100%;">
+                <section>
+                    <div id="patron2" style="margin-left: 10%;height: 160px;">
+                        <p class="titulo" style="margin-top: 0px; margin-bottom: 0px;">
+                            GALERIA
+                        </p>
+                    </div>
+                    <div class="bloque">
+                        <p id="parrafo">
+                            Acá están varias imagenes del videojuego de Scratch, donde se ven varios niveles, la selección de personas.
+                        </p>
+                    </div>
+                </section>
+
+                <section>
+                    <div class="deslizador">
+                        <ul style="margin-top: 0;">
+                            <li>
+                                <img src="imagenes/imgJuego1.png" alt="Logo">
+                            </li>
+                            <li>
+                                <img src="imagenes/imgJuego2.png" alt="Selección de Personajes">
+                            </li>
+                            <li>
+                                <img src="imagenes/imgJuego3.png" alt="Primer Nivel">
+                            </li>
+                            <li>
+                                <img src="imagenes/imgJuego4.png" alt="Segundo Nivel">
+                            </li>
+                        </ul>
+                    </div>
+
+                </section>
+            </div>
+        </div>
     </div>
 
-    <h2 class="subtitulo">
-        Video explicativo<br>
-    </h2>
-
-    <p align="center"><iframe width="560" height="315" src="https://www.youtube.com/embed/Yeb7YUQrVkA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></iframe></p>
-
-    <h2 class="subtitulo">
-        Creado por:<br>
-    </h2>
-
-    <div style="width: 20%;" class="div_texto">
-        <p>
-            Javier Cantillo de la Asunción<br>
-            Stiven Javier Guzmán Otero<br>
-            Jaider Rojas Alvarez<br>
-			Omar Yesid García Guzmán<br>
-        <p>
-    </div>
-
-    <div class="boton" > 
-        <a href="contacto.html"> 
-            Contactar
-        </a>
-    </div>
-
-    <h2 class="subtitulo">
-        Fotos de Dinglis+
-    </h2>
-
-        <div class="deslizador">
-			<ul>
-				<li>
-                    <img src="images/imgJuego1.png" alt="logo">
-                </li>
-				<li>
-                    <img src="images/imgJuego2.png" alt="selección de personajes">
-                </li>
-				<li>
-                    <img src="images/imgJuego3.png" alt="primer nivel">
-                </li>
-				<li>
-                    <img src="images/imgJuego4.png" alt="segundo nivel">
-                </li>
-			</ul>
-		</div>
-
-    <div id="jugar" >
-        <a target="_blank" href="https://scratch.mit.edu/projects/419176047">JUGAR</a>
-    </div>
-
-    <footer id="footer" >
-        <p > 
-            Dinglis+ - 2020 - Media Tecnica Desarrollo de Software - Institución Educativa Héctor Abad Gómez
-        </p>
-        <p align="center">
-            <a href="https://www.iehectorabadgomez.edu.co/"><img style="padding: 0px; margin: 0px; margin-top: 5px; " width="64" height="64" src="images/I.E.Hector_Abad_Gomez.png" alt="Logo I.E Hector Abad Gomez"></a>
-            <a href="https://pascualbravo.edu.co/"> <img style="padding: 0px; margin: 0px; margin-top: 5px; " width="64" height="70" src="images/Pascual_Bravo.png" alt="Logo Pascual Bravo"></a>
-        </p>
-    </footer>
 </body>
+<footer>
+    <div id="info-footer">
+        <p>info</p>
+    </div>
+
+    <div id="paginas-footer">
+        <p>paginas</p>
+    </div>
+</footer>
+
 </html>
