--- a/jugar.html
+++ b/jugar.html
@@ -1,55 +1,95 @@
-<!DOCTYPE html>
+<html lang="en">
+
 <head>
-    <meta charset="utf-8"/>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jugar - Dinglis+</title>
-    <link rel="icon" type="image/png" href="images/icono.ico">
-    <meta name="description" content="Dinglis es un juego de plataformas para aprender ingles hecho en la plataforma de Scratch"/>
-    <meta name="author" content="JSJ Team"/>
-    <meta name="keywords" content="Ingles, Dinglis, Juego"/>
-    <link rel="stylesheet" type="text/css" href="css/NavBarra.css" />
-    <link rel="stylesheet" type="text/css" href="css/Pagina.css">
-    <link rel="stylesheet" type="text/css" href="css/deslizador.css">
+    <link rel="icon" type="image/x-icon" href="imagenes/icono.ico">
+    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/pagina.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/deslizador.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;700&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=VT323&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@1,700&display=swap" rel="stylesheet">
 </head>
-<body id="body">
-    <br>
-    <a href="inicio.html"><img href="inicio.html" id="logo" src="images/logo.png" width="375" height="105" alt="Dinglis Logo"></a>
-    <br>
-    <nav class="NavBarra">
-        <ul>
-            <li><a href="inicio.html">Inicio</a></li>
-            <li><a href="objetivos.html">Objetivos</a></li>
-            <li><a href="problema.html">Problema</a></li>
-            <li><a class="active" style="color: black;" href="#">Jugar</a></li>
-            <li><a href="herramientas.html">Herramientas</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="Login.html">Cerrar Sesión</a></li>
-        </ul>
+
+<body>
+
+    <nav id="nav">
+        <div id="nav-logo">
+            <a>DINGLIS+</a>
+        </div>
+
+        <div id="nav-paginas">
+            <ul id="nav-lista">
+                <div style="margin-right: 50px;width: 0;float: right;">&nbsp;</div>
+                <li class="dropdown" style="float: right;">
+                    <a class="dropbtn hover-underline-animation" style="margin-right: 0;" href="">Perfil</a>
+                    <div class="dropdown-content">
+                        <a class="hover-underline-animation" style="margin-right: 0px;" href="index.php">Cerrar sesión</a>
+                    </div>
+                </li>
+                <li><a class="hover-underline-animation" href="contacto.html">Contacto</a></li>
+                <li><a class="hover-underline-animation" href="herramientas.html">Herramientas</a></li>
+                <li style="margin-top: 10;"><a style="margin-right: 40px;" class="actual" href="jugar.html">Jugar</a></li>
+                <li><a class="hover-underline-animation" href="">Quiz</a></li>
+                <li><a class="hover-underline-animation" href="tips.html">Tips</a></li>
+                <li ><a class="hover-underline-animation" href="inicio.html">Inicio</a></li>
+
+            </ul>
+        </div>
     </nav>
-    <div>
-        <h1 class="subtitulo">
-            ¿Cómo se puede jugar Dinglis+?
-        </h1>
-        <div class="div_texto">
-            <p>
-                Para poder jugar a Dinglis+ se debe ir a la pagina de Scratch, la cual es la plataforma con la que se realizo y donde se aloja.<br>
-                Puedes hacerlo dandole click al boton de Jugar o mediante esta pagina.<br>
-            </p>
+
+
+    <div id="contenedor">
+        <div>
+            <section style="height: 77%;">
+
+                <div id="patron1" style="padding-bottom: 7%; padding-right: 2%;">
+                    <p class="titulo" style="margin-top: 0px; margin-bottom: 0px; font-size: 100px; text-align: left;">
+                        ¿Cómo Jugar<br>Dinglis+?&nbsp;
+                    </p>
+                </div>
+
+
+                <div class="bloque">
+                    <p id="parrafo">
+                        Para poder jugar a Dinglis+ se debe ir a la pagina de Scratch, la cual es la plataforma con la que se realizo y donde se aloja. <br>
+                        Puedes hacerlo dandole click al boton de Jugar o mediante esta pagina. <br>
+                    </p>
+                </div>
+                <div class="bloque">
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+
+                    <button class="boton" style="margin-left: 40%;"><a href="https://scratch.mit.edu/projects/419176047" target="_blank" style="color: white;">Jugar</a></button>
+                </div>
+            </section>
+
+            <section style="height: 77%; margin-bottom: 7%;">
+                <iframe style="border: solid rgb(255, 109, 109) 5px; border-radius: 5px; margin-left: -100px; margin-top: 30px;" src="https://scratch.mit.edu/projects/419176047/embed" allowtransparency="true" width="976" height="734" frameborder="0" scrolling="no" allowfullscreen></iframe>
+            </section>
         </div>
-        <div id="jugar" >
-            <a target="_blank" href="https://scratch.mit.edu/projects/419176047">JUGAR</a>
-        </div>
-        <p align="center" style="margin: 25px;"><iframe id="Scratch" src="https://scratch.mit.edu/projects/419176047/embed" allowtransparency="true" width="679" height="563" frameborder="0" scrolling="no" allowfullscreen></iframe></p>
-        <br>
-        <br>
     </div>
-    <footer id="footer" >
-        <p > 
-            Dinglis+ - 2020 - Media Tecnica Desarrollo de Software - Institución Educativa Héctor Abad Gómez
-        </p>
-        <p align="center">
-            <a href="https://www.iehectorabadgomez.edu.co/"><img style="padding: 0px; margin: 0px; margin-top: 5px; " width="64" height="64" src="images/I.E.Hector_Abad_Gomez.png" alt="Logo I.E Hector Abad Gomez"></a>
-            <a href="https://pascualbravo.edu.co/"> <img style="padding: 0px; margin: 0px; margin-top: 5px; " width="64" height="70" src="images/Pascual_Bravo.png" alt="Logo Pascual Bravo"></a>
-        </p>
-    </footer>
+
 </body>
+<footer>
+    <div id="info-footer">
+        <p>info</p>
+    </div>
+
+    <div id="paginas-footer">
+        <p>paginas</p>
+    </div>
+</footer>
+
 </html>
