Actualice el footer y arrregle el HTML

--- a/herramientas.html
+++ b/herramientas.html
@@ -41,7 +41,7 @@
                 <li><a class="hover-underline-animation" href="jugar.html">Jugar</a></li>
                 <li><a class="hover-underline-animation" href="">Quiz</a></li>
                 <li><a class="hover-underline-animation" href="tips.html">Tips</a></li>
-                <li ><a class="hover-underline-animation" href="inicio.html">Inicio</a></li>
+                <li><a class="hover-underline-animation" href="inicio.html">Inicio</a></li>
 
             </ul>
         </div>
@@ -82,11 +82,12 @@
 </body>
 <footer>
     <div id="info-footer">
-        <p>info</p>
+        <p>Dinglis © 2021</p>
     </div>
 
     <div id="paginas-footer">
-        <p>paginas</p>
+        <p style="display: inline-block; margin-right: 10%; margin-left: 25%;">Institución Universitaria Pascual Bravo</p>
+        <p style="display: inline-block;">Institución Educativa Hectór Abad Gómez</p>
     </div>
 </footer>
 
