--- a/tips.html
+++ b/tips.html
@@ -41,7 +41,7 @@
                 <li><a class="hover-underline-animation" href="jugar.html">Jugar</a></li>
                 <li><a class="hover-underline-animation" href="">Quiz</a></li>
                 <li style="margin-top: 10;"><a style="margin-right: 40px;" class="actual" href="tips.html">Tips</a></li>
-                <li ><a class="hover-underline-animation" href="inicio.html">Inicio</a></li>
+                <li><a class="hover-underline-animation" href="inicio.html">Inicio</a></li>
 
             </ul>
         </div>
@@ -61,13 +61,13 @@
 
                 <div class="bloque">
                     <p id="parrafo">
-                        
 
-    - Ve películas y series. Este consejo te permite pasar un rato de ocio mientras estudias inglés. Además te ayuda a conocer expresiones típicas.<br><br>
 
-    - Escucha música. Las letras de canciones te dan acceso a la sonoridad de las palabras, acentos y te ayudan a aprender como pronunciar el inglés de manera correcta.<br><br>
+                        - Ve películas y series. Este consejo te permite pasar un rato de ocio mientras estudias inglés. Además te ayuda a conocer expresiones típicas.<br><br>
 
-    - Lee libros. Ya sea ficción o no ficción, leer libros en inglés, desde historietas a los clásicos de la literatura inglesa, adquirirás vocabulario y gramática. <br><br>
+                        - Escucha música. Las letras de canciones te dan acceso a la sonoridad de las palabras, acentos y te ayudan a aprender como pronunciar el inglés de manera correcta.<br><br>
+
+                        - Lee libros. Ya sea ficción o no ficción, leer libros en inglés, desde historietas a los clásicos de la literatura inglesa, adquirirás vocabulario y gramática. <br><br>
 
                     </p>
                 </div>
@@ -82,11 +82,12 @@
 </body>
 <footer>
     <div id="info-footer">
-        <p>info</p>
+        <p>Dinglis © 2021</p>
     </div>
 
     <div id="paginas-footer">
-        <p>paginas</p>
+        <p style="display: inline-block; margin-right: 10%; margin-left: 25%;">Institución Universitaria Pascual Bravo</p>
+        <p style="display: inline-block;">Institución Educativa Hectór Abad Gómez</p>
     </div>
 </footer>
 
