--- a/contacto.html
+++ b/contacto.html
@@ -41,7 +41,7 @@
                 <li><a class="hover-underline-animation" href="jugar.html">Jugar</a></li>
                 <li><a class="hover-underline-animation" href="">Quiz</a></li>
                 <li><a class="hover-underline-animation" href="tips.html">Tips</a></li>
-                <li ><a class="hover-underline-animation" href="inicio.html">Inicio</a></li>
+                <li><a class="hover-underline-animation" href="inicio.html">Inicio</a></li>
 
             </ul>
         </div>
@@ -61,16 +61,16 @@
 
                 <div class="bloque">
                     <p id="parrafo">
-                        
 
-    
 
-Acá está la información para contactar a los creadores de Dinglis+<br><br>
 
-Javier Cantillo de la Asunción - javiercantillodelaasuncion@pascualbravo.edu.co<br><br>
-Stiven Javier Guzmán Otero - stivenjavierguzmanotero@pascualbravo.edu.co<br><br>
-Jaider Rojas Alvarez - jaiderrojasalvarez@pascualbravo.edu.co<br><br>
-Omar Yesid García Guzmán - omaryesidgarciaguzman@pascualbravo.edu.co
+
+                        Acá está la información para contactar a los creadores de Dinglis+<br><br>
+
+                        Javier Cantillo de la Asunción - javiercantillodelaasuncion@pascualbravo.edu.co<br><br>
+                        Stiven Javier Guzmán Otero - stivenjavierguzmanotero@pascualbravo.edu.co<br><br>
+                        Jaider Rojas Alvarez - jaiderrojasalvarez@pascualbravo.edu.co<br><br>
+                        Omar Yesid García Guzmán - omaryesidgarciaguzman@pascualbravo.edu.co
 
                     </p>
                 </div>
@@ -85,11 +85,12 @@ Omar Yesid García Guzmán - omaryesidgarciaguzman@pascualbravo.edu.co
 </body>
 <footer>
     <div id="info-footer">
-        <p>info</p>
+        <p>Dinglis © 2021</p>
     </div>
 
     <div id="paginas-footer">
-        <p>paginas</p>
+        <p style="display: inline-block; margin-right: 10%; margin-left: 25%;">Institución Universitaria Pascual Bravo</p>
+        <p style="display: inline-block;">Institución Educativa Hectór Abad Gómez</p>
     </div>
 </footer>
 
