--- a/inicio.html
+++ b/inicio.html
@@ -67,8 +67,8 @@
                     </p>
                 </div>
                 <div class="bloque">
-                    <button class="boton" style="margin-left: 150px;">Quiz</button>
-                    <button class="boton">Videojuego</button>
+                    <button class="boton" style="margin-left: 150px;"><a href="" style="text-decoration: none; color: white;">Quiz</a></button>
+                    <button class="boton"><a href="jugar.html" style="text-decoration: none; color: white;">Videojuego</a></button>
                 </div>
             </section>
 
@@ -94,7 +94,7 @@
                     </div>
                     <div class="bloque">
                         <p id="parrafo">
-                            Acá están varias imagenes del videojuego de Scratch, donde se ven varios niveles, la selección de personas.
+                            Acá están varias imagenes del videojuego de Scratch, donde se ven varios niveles y la selección de personajes.
                         </p>
                     </div>
                 </section>
@@ -125,11 +125,12 @@
 </body>
 <footer>
     <div id="info-footer">
-        <p>info</p>
+        <p>Dinglis © 2021</p>
     </div>
 
     <div id="paginas-footer">
-        <p>paginas</p>
+        <p style="display: inline-block; margin-right: 10%; margin-left: 25%;">Institución Universitaria Pascual Bravo</p>
+        <p style="display: inline-block;">Institución Educativa Hectór Abad Gómez</p>
     </div>
 </footer>
 
