--- a/jugar.html
+++ b/jugar.html
@@ -41,7 +41,7 @@
                 <li style="margin-top: 10;"><a style="margin-right: 40px;" class="actual" href="jugar.html">Jugar</a></li>
                 <li><a class="hover-underline-animation" href="">Quiz</a></li>
                 <li><a class="hover-underline-animation" href="tips.html">Tips</a></li>
-                <li ><a class="hover-underline-animation" href="inicio.html">Inicio</a></li>
+                <li><a class="hover-underline-animation" href="inicio.html">Inicio</a></li>
 
             </ul>
         </div>
@@ -71,7 +71,7 @@
                     <br>
                     <br>
 
-                    <button class="boton" style="margin-left: 40%;"><a href="https://scratch.mit.edu/projects/419176047" target="_blank" style="color: white;">Jugar</a></button>
+                    <button class="boton" style="margin-left: 40%;"><a href="https://scratch.mit.edu/projects/419176047" target="_blank" style="color: white;text-decoration: none;">Jugar</a></button>
                 </div>
             </section>
 
@@ -84,11 +84,12 @@
 </body>
 <footer>
     <div id="info-footer">
-        <p>info</p>
+        <p>Dinglis © 2021</p>
     </div>
 
     <div id="paginas-footer">
-        <p>paginas</p>
+        <p style="display: inline-block; margin-right: 10%; margin-left: 25%;">Institución Universitaria Pascual Bravo</p>
+        <p style="display: inline-block;">Institución Educativa Hectór Abad Gómez</p>
     </div>
 </footer>
 
