Correción de texto

--- a/inicio.html
+++ b/inicio.html
@@ -39,8 +39,7 @@
                 <li><a class="hover-underline-animation" href="contacto.html">Contacto</a></li>
                 <li><a class="hover-underline-animation" href="herramientas.html">Herramientas</a></li>
                 <li><a class="hover-underline-animation" href="jugar.html">Jugar</a></li>
-                <li><a class="hover-underline-animation" href="">Quiz</a></li>
-                <li><a class="hover-underline-animation" href="tips.html">Tips</a></li>
+                 <li><a class="hover-underline-animation" href="tips.html">Tips</a></li>
                 <li style="margin-top: 10;"><a style="margin-right: 40px;" class="actual" href="inicio.html">Inicio</a></li>
             </ul>
         </div>
@@ -53,7 +52,7 @@
 
                 <div id="patron1">
                     <p class="titulo" style="margin-top: 0px; margin-bottom: 0px;">
-                        APRENDE<br>INGLES&nbsp;
+                        APRENDE<br>INGLÉS&nbsp;
                     </p>
                 </div>
 
@@ -63,12 +62,12 @@
                         Aprende sustantivos, verbos, adjetivos, adverbios con Dinglis+
                         <br>
 
-                        Puedes aprender jugando el videojuego o solucionando el quiz.
+                        Puedes aprender jugando el videojuego.
                     </p>
                 </div>
                 <div class="bloque">
-                    <button class="boton" style="margin-left: 150px;"><a href="" style="text-decoration: none; color: white;">Quiz</a></button>
-                    <button class="boton"><a href="jugar.html" style="text-decoration: none; color: white;">Videojuego</a></button>
+                    
+                    <button class="boton" style="margin-left:30%;"><a href="jugar.html" style="text-decoration: none; color: white;">Videojuego</a></button>
                 </div>
             </section>
 
@@ -94,8 +93,7 @@
                     </div>
                     <div class="bloque">
                         <p id="parrafo">
-                            Acá están varias imagenes del videojuego de Scratch, donde se ven varios niveles y la selección de personajes.
-                        </p>
+                        Acá están varias imágenes del videojuego de Scratch, donde se ven varios niveles y la selección de personajes.                        </p>
                     </div>
                 </section>
 
