--- a/herramientas.html
+++ b/herramientas.html
@@ -1,6 +1,6 @@
 <html lang="en">
-
 <head>
+    <!DOCTYPE html>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -60,7 +60,7 @@
 
                 <div class="bloque">
                     <p id="parrafo">
-                        Las herramientas utilizadas para hacer Dinglis fueron varias, todas son gratuitas y sencillas de usar.<br><br>
+                        Las herramientas utilizadas para hacer Dinglis+ fueron varias, todas son gratuitas y sencillas de usar.<br><br>
 
                         <a href="https://scratch.mit.edu/" target="_blank" style="color: black;"> - Scratch </a>
                         <br><br><br>
@@ -73,21 +73,21 @@
             </section>
 
             <section style="height: 77%;">
-                <img style="width: 700px; height: 700px; margin-top: 10%; margin-left: 10%;" id="imagenIngles" src="imagenes/tools.svg">
+                <img style="width: 700px; height: 700px; margin-top: 10%; margin-left: 10%;" class="imagen" alt="Icono de herramientas" src="imagenes/tools.svg">
             </section>
         </div>
     </div>
 
-</body>
 <footer>
-    <div id="info-footer">
-        <p>Dinglis © 2021</p>
-    </div>
-
-    <div id="paginas-footer">
-        <p style="display: inline-block; margin-right: 10%; margin-left: 25%;">Institución Universitaria Pascual Bravo</p>
-        <p style="display: inline-block;">Institución Educativa Hectór Abad Gómez</p>
-    </div>
-</footer>
+        <div id="info-footer">
+            <p>Dinglis © 2021</p>
+        </div>
+    
+        <div id="paginas-footer">
+            <p style="display: inline-block; margin-right: 10%; margin-left: 25%;">Institución Universitaria Pascual Bravo</p>
+            <p style="display: inline-block;">Institución Educativa Hectór Abad Gómez</p>
+        </div>
+    </footer>
+</body>
 
 </html>
