--- a/inicio.html
+++ b/inicio.html
@@ -67,7 +67,7 @@
                 </div>
                 <div class="bloque">
                     
-                    <button class="boton" style="margin-left:30%;"><a href="jugar.html" style="text-decoration: none; color: white;">Videojuego</a></button>
+                    <button class="boton" style="margin-left:30%;"><a href="jugar.html" style="text-decoration: none; color: white;">Jugar</a></button>
                 </div>
             </section>
 
