--- a/jugar.html
+++ b/jugar.html
@@ -1,6 +1,7 @@
 <html lang="en">
 
 <head>
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -60,8 +61,7 @@
 
                 <div class="bloque">
                     <p id="parrafo">
-                        Para poder jugar a Dinglis+ se debe ir a la pagina de Scratch, la cual es la plataforma con la que se realizo y donde se aloja. <br>
-                        Puedes hacerlo dandole click al boton de Jugar o mediante esta pagina. <br>
+                        Para poder jugar a Dinglis+ se debe ir a la página de Scratch, la cual es la plataforma con la que se realizó y donde se aloja.<br><br>Puedes hacerlo dándole clic al botón de Jugar o mediante esta página. <br>
                     </p>
                 </div>
                 <div class="bloque">
@@ -69,8 +69,10 @@
                     <br>
                     <br>
                     <br>
+                    <br>
+                    <br>
 
-                    <button class="boton" style="margin-left: 40%;"><a href="https://scratch.mit.edu/projects/419176047" target="_blank" style="color: white;text-decoration: none;">Jugar</a></button>
+                    <button class="boton" style="margin-left: 10%;"><a href="https://scratch.mit.edu/projects/419176047" target="_blank" style="color: white;text-decoration: none;">Ir a la página de Scratch</a></button>
                 </div>
             </section>
 
@@ -80,16 +82,16 @@
         </div>
     </div>
 
-</body>
 <footer>
-    <div id="info-footer">
-        <p>Dinglis © 2021</p>
-    </div>
-
-    <div id="paginas-footer">
-        <p style="display: inline-block; margin-right: 10%; margin-left: 25%;">Institución Universitaria Pascual Bravo</p>
-        <p style="display: inline-block;">Institución Educativa Hectór Abad Gómez</p>
-    </div>
-</footer>
+        <div id="info-footer">
+            <p>Dinglis © 2021</p>
+        </div>
+    
+        <div id="paginas-footer">
+            <p style="display: inline-block; margin-right: 10%; margin-left: 25%;">Institución Universitaria Pascual Bravo</p>
+            <p style="display: inline-block;">Institución Educativa Hectór Abad Gómez</p>
+        </div>
+    </footer>
+</body>
 
 </html>
