--- a/tips.html
+++ b/tips.html
@@ -1,6 +1,8 @@
 <html lang="en">
 
+
 <head>
+    <!DOCTYPE html>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -62,8 +64,7 @@
                     <p id="parrafo">
 
 
-                        - Ve películas y series. Este consejo te permite pasar un rato de ocio mientras estudias inglés. Además te ayuda a conocer expresiones típicas.<br><br>
-
+                         - Ve películas y series. Este consejo te permite pasar un rato de ocio mientras estudias inglés. Además, te ayuda a conocer expresiones típicas.<br><br>
                         - Escucha música. Las letras de canciones te dan acceso a la sonoridad de las palabras, acentos y te ayudan a aprender como pronunciar el inglés de manera correcta.<br><br>
 
                         - Lee libros. Ya sea ficción o no ficción, leer libros en inglés, desde historietas a los clásicos de la literatura inglesa, adquirirás vocabulario y gramática. <br><br>
@@ -73,21 +74,21 @@
             </section>
 
             <section style="height: 77%;">
-                <img style="width: 700px; height: 700px; margin-top: 10%; margin-left: 10%;" id="imagenIngles" src="imagenes/ingles-cuna-blog.jpg">
+                <img style="width: 700px; height: 700px; margin-top: 10%; margin-left: 10%;" class="imagen" alt="Tips de Inglés" src="imagenes/ingles-cuna-blog.jpg">
             </section>
         </div>
     </div>
 
-</body>
 <footer>
-    <div id="info-footer">
-        <p>Dinglis © 2021</p>
-    </div>
-
-    <div id="paginas-footer">
-        <p style="display: inline-block; margin-right: 10%; margin-left: 25%;">Institución Universitaria Pascual Bravo</p>
-        <p style="display: inline-block;">Institución Educativa Hectór Abad Gómez</p>
-    </div>
-</footer>
+        <div id="info-footer">
+            <p>Dinglis © 2021</p>
+        </div>
+    
+        <div id="paginas-footer">
+            <p style="display: inline-block; margin-right: 10%; margin-left: 25%;">Institución Universitaria Pascual Bravo</p>
+            <p style="display: inline-block;">Institución Educativa Hectór Abad Gómez</p>
+        </div>
+    </footer>
+</body>
 
 </html>
