--- a/inicio.html
+++ b/inicio.html
@@ -24,7 +24,7 @@
 
     <nav id="nav">
         <div id="nav-logo">
-            <a>DINGLIS+</a>
+            <a>Dinglis+</a>
         </div>
 
         <div id="nav-paginas">
@@ -59,15 +59,13 @@
 
                 <div class="bloque">
                     <p id="parrafo">
-                        Aprende sustantivos, verbos, adjetivos, adverbios con Dinglis+
-                        <br>
-
+                        Aprende sustantivos, verbos, adjetivos, adverbios con Dinglis+<br>
                         Puedes aprender jugando el videojuego.
                     </p>
                 </div>
                 <div class="bloque">
                     
-                    <button class="boton" style="margin-left:30%;"><a href="jugar.html" style="text-decoration: none; color: white;">Jugar</a></button>
+                    <button class="boton" style="margin-left:35%; margin-top: 0px;"><a href="jugar.html" style="text-decoration: none; color: white;">Jugar</a></button>
                 </div>
             </section>
 
@@ -76,19 +74,11 @@
             </section>
         </div>
         <div style="display: inline-block; width: 100%;">
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
             <div id="seccion-abajo" style="display: inline-block; width: 100%;">
                 <section>
                     <div id="patron2" style="margin-left: 10%;height: 160px;">
                         <p class="titulo" style="margin-top: 0px; margin-bottom: 0px;">
-                            GALERIA
+                            GALERÍA
                         </p>
                     </div>
                     <div class="bloque">
@@ -123,7 +113,7 @@
 </body>
 <footer>
     <div id="info-footer">
-        <p>Dinglis © 2021</p>
+        <p>Dinglis+ © 2021</p>
     </div>
 
     <div id="paginas-footer">
