--- a/herramientas.html
+++ b/herramientas.html
@@ -24,7 +24,7 @@
 
     <nav id="nav">
         <div id="nav-logo">
-            <a>DINGLIS+</a>
+            <a>Dinglis+</a>
         </div>
 
         <div id="nav-paginas">
@@ -47,7 +47,7 @@
     </nav>
 
 
-    <div id="contenedor">
+    <div id="contenedor" style="margin-bottom: 5%;">
         <div>
             <section style="height: 77%;">
 
@@ -62,11 +62,14 @@
                     <p id="parrafo">
                         Las herramientas utilizadas para hacer Dinglis+ fueron varias, todas son gratuitas y sencillas de usar.<br><br>
 
-                        <a href="https://scratch.mit.edu/" target="_blank" style="color: black;"> - Scratch </a>
+                        <a href="https://scratch.mit.edu/" target="_blank" style="color: rgb(255, 109, 109); text-decoration: none;"> Scratch </a><br>
+                        <img class="imagenH" width="100" height="110" src="https://scratchcolombia.files.wordpress.com/2016/01/scratch-cat-med.png" alt="logo Scratch">
                         <br><br><br>
-                        <a href="https://www.piskelapp.com/" target="_blank" style="color: black;"> - Piskel </a>
+                        <a href="https://www.piskelapp.com/" target="_blank" style="color: rgb(255, 109, 109); text-decoration: none;"> Piskel </a><br>
+                        <img class="imagenH" style="filter: invert(1);" width="180" height="80" src="https://irinainina.github.io/piskel-clone/assets/img/logo.png" alt="logo Piskel">
                         <br><br><br>
-                        <a href="http://www.gimp.org.es/" target="_blank" style="color: black;"> - GIMP </a>
+                        <a href="http://www.gimp.org.es/" target="_blank" style="color: rgb(255, 109, 109); text-decoration: none;"> GIMP </a><br>
+                        <img class="imagenH" width="100" height="110" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/The_GIMP_icon_-_gnome.svg/1024px-The_GIMP_icon_-_gnome.svg.png" alt="logo GIMP">
 
                     </p>
                 </div>
@@ -78,9 +81,9 @@
         </div>
     </div>
 
-<footer>
+<footer style="top: -100px">
         <div id="info-footer">
-            <p>Dinglis © 2021</p>
+            <p>Dinglis+ © 2021</p>
         </div>
     
         <div id="paginas-footer">
