--- a/jugar.html
+++ b/jugar.html
@@ -25,7 +25,7 @@
 
     <nav id="nav">
         <div id="nav-logo">
-            <a>DINGLIS+</a>
+            <a>Dinglis+</a>
         </div>
 
         <div id="nav-paginas">
@@ -84,7 +84,7 @@
 
 <footer>
         <div id="info-footer">
-            <p>Dinglis © 2021</p>
+            <p>Dinglis+ © 2021</p>
         </div>
     
         <div id="paginas-footer">
