--- a/tips.html
+++ b/tips.html
@@ -26,7 +26,7 @@
 
     <nav id="nav">
         <div id="nav-logo">
-            <a>DINGLIS+</a>
+            <a>Dinglis+</a>
         </div>
 
         <div id="nav-paginas">
@@ -81,7 +81,7 @@
 
 <footer>
         <div id="info-footer">
-            <p>Dinglis © 2021</p>
+            <p>Dinglis+ © 2021</p>
         </div>
     
         <div id="paginas-footer">
