Arregle la navbar, html, css, etc.

--- a/jugar.html
+++ b/jugar.html
@@ -40,7 +40,7 @@
                 <li><a class="hover-underline-animation" href="contacto.html">Contacto</a></li>
                 <li><a class="hover-underline-animation" href="herramientas.html">Herramientas</a></li>
                 <li style="margin-top: 10;"><a style="margin-right: 40px;" class="actual" href="jugar.html">Jugar</a></li>
-                 <li><a class="hover-underline-animation" href="tips.html">Tips</a></li>
+                 <li><a class="hover-underline-animation" style="margin-right: 40px;" href="tips.html">Tips</a></li>
                 <li><a class="hover-underline-animation" href="inicio.html">Inicio</a></li>
 
             </ul>
@@ -72,7 +72,7 @@
                     <br>
                     <br>
 
-                    <button class="boton" style="margin-left: 10%;"><a href="https://scratch.mit.edu/projects/419176047" target="_blank" style="color: white;text-decoration: none;">Ir a la página de Scratch</a></button>
+                    <button class="boton" style="margin-left: 10%;margin-top: 50px;"><a href="https://scratch.mit.edu/projects/419176047" target="_blank" style="color: white;text-decoration: none;">Ir a la página de Scratch</a></button>
                 </div>
             </section>
 
