--- a/contacto.html
+++ b/contacto.html
@@ -37,7 +37,7 @@
                     </div>
                 </li>
                 <li style="margin-top: 10;"><a style="margin-right: 40px;" class="actual" href="contacto.html">Contacto</a></li>
-                <li><a class="hover-underline-animation" href="herramientas.html">Herramientas</a></li>
+                <li><a class="hover-underline-animation" style="margin-right: 40px;" href="herramientas.html">Herramientas</a></li>
                 <li><a class="hover-underline-animation" href="jugar.html">Jugar</a></li>
                  <li><a class="hover-underline-animation" href="tips.html">Tips</a></li>
                 <li><a class="hover-underline-animation" href="inicio.html">Inicio</a></li>
