--- a/herramientas.html
+++ b/herramientas.html
@@ -38,7 +38,7 @@
                 </li>
                 <li><a class="hover-underline-animation" href="contacto.html">Contacto</a></li>
                 <li style="margin-top: 10;"><a style="margin-right: 40px;" class="actual" href="herramientas.html">Herramientas</a></li>
-                <li><a class="hover-underline-animation" href="jugar.html">Jugar</a></li>
+                <li><a class="hover-underline-animation" style="margin-right: 40px;" href="jugar.html">Jugar</a></li>
                  <li><a class="hover-underline-animation" href="tips.html">Tips</a></li>
                 <li><a class="hover-underline-animation" href="inicio.html">Inicio</a></li>
 
