--- a/tips.html
+++ b/tips.html
@@ -42,7 +42,7 @@
                 <li><a class="hover-underline-animation" href="herramientas.html">Herramientas</a></li>
                 <li><a class="hover-underline-animation" href="jugar.html">Jugar</a></li>
                  <li style="margin-top: 10;"><a style="margin-right: 40px;" class="actual" href="tips.html">Tips</a></li>
-                <li><a class="hover-underline-animation" href="inicio.html">Inicio</a></li>
+                <li><a class="hover-underline-animation" style="margin-right: 40px;" href="inicio.html">Inicio</a></li>
 
             </ul>
         </div>
