--- a/contacto.html
+++ b/contacto.html
@@ -76,7 +76,7 @@
             </section>
 
             <section style="height: 77%;">
-                <img style="width: 700px; height: 700px; margin-top: 10%; margin-left: 10%;" id="imagenIngles" src="imagenes/email.png">
+                <img style="width: 700px; height: 700px; margin-top: 10%; margin-left: 10%;" class="imagen" src="imagenes/email.png">
             </section>
         </div>
     </div>
