--- a/inicio.html
+++ b/inicio.html
@@ -70,7 +70,8 @@
             </section>
 
             <section style="height: 77%;">
-                <img id="imagenIngles" src="imagenes/english.jpg">
+                <img class="imagen" src="imagenes/english.jpg">
+                <img style="margin-left: 25%;" src="imagenes/iloveenglish.gif">
             </section>
         </div>
         <div style="display: inline-block; width: 100%;">
