Agregue quiz en html

--- a/contacto.html
+++ b/contacto.html
@@ -33,11 +33,13 @@
                 <li class="dropdown" style="float: right;">
                     <a class="dropbtn hover-underline-animation" style="margin-right: 0;" href="">Perfil</a>
                     <div class="dropdown-content">
+                        <a class="hover-underline-animation" style="margin-right: 0px;" href="index.php">Estadisticas</a>
                         <a class="hover-underline-animation" style="margin-right: 0px;" href="index.php">Cerrar sesión</a>
                     </div>
                 </li>
                 <li style="margin-top: 10;"><a style="margin-right: 40px;" class="actual" href="contacto.html">Contacto</a></li>
                 <li><a class="hover-underline-animation" style="margin-right: 40px;" href="herramientas.html">Herramientas</a></li>
+                <li><a class="hover-underline-animation" href="quiz.html">Quiz</a></li>
                 <li><a class="hover-underline-animation" href="jugar.html">Jugar</a></li>
                  <li><a class="hover-underline-animation" href="tips.html">Tips</a></li>
                 <li><a class="hover-underline-animation" href="inicio.html">Inicio</a></li>
