--- a/inicio.html
+++ b/inicio.html
@@ -33,13 +33,15 @@
                 <li class="dropdown" style="float: right;">
                     <a class="dropbtn hover-underline-animation" style="margin-right: 0;" href="">Perfil</a>
                     <div class="dropdown-content">
+                        <a class="hover-underline-animation" style="margin-right: 0px;" href="">Estadisticas</a>
                         <a class="hover-underline-animation" style="margin-right: 0px;" href="index.php">Cerrar sesión</a>
                     </div>
                 </li>
                 <li><a class="hover-underline-animation" href="contacto.html">Contacto</a></li>
                 <li><a class="hover-underline-animation" href="herramientas.html">Herramientas</a></li>
+                <li><a class="hover-underline-animation" href="quiz.html">Quiz</a></li>
                 <li><a class="hover-underline-animation" href="jugar.html">Jugar</a></li>
-                 <li><a class="hover-underline-animation" href="tips.html">Tips</a></li>
+                <li><a class="hover-underline-animation" href="tips.html">Tips</a></li>
                 <li style="margin-top: 10;"><a style="margin-right: 40px;" class="actual" href="inicio.html">Inicio</a></li>
             </ul>
         </div>
@@ -60,14 +62,14 @@
                 <div class="bloque">
                     <p id="parrafo">
                         Aprende sustantivos, verbos, adjetivos, adverbios con Dinglis+<br>
-                        Puedes aprender jugando el videojuego.
+                        Puedes aprender jugando el videojuego o haciendo el quiz.
                     </p>
                 </div>
                 <div class="bloque">
-                    
-                    <button class="boton" style="margin-left:35%; margin-top: 0px;"><a href="jugar.html" style="text-decoration: none; color: white;">Jugar</a></button>
+                    <button class="boton" style="margin-left:25%; margin-top: 30px;"><a href="jugar.html" style="text-decoration: none; color: white;">Jugar</a></button>
+                    <button class="boton" style="margin-top: 0px;"><a href="quiz.html" style="text-decoration: none; color: white;">Quiz</a></button>
                 </div>
-            </section>
+            </section> 
 
             <section style="height: 77%;">
                 <img class="imagen" src="imagenes/english.jpg">
@@ -86,7 +88,7 @@
                     </div>
                     <div class="bloque">
                         <p id="parrafo">
-                        Acá están varias imágenes del videojuego de Scratch, donde se ven varios niveles y la selección de personajes.                        </p>
+                        Acá están varias imágenes del videojuego de Scratch, donde se ven varios niveles y la selección de personajes.</p>
                     </div>
                 </section>
 
